Fix a few layout issues
* missing slack icon.
* logo link to main site.
* grey bar link to root.
* text spacing in footer.
* Menu ordering

--- a/themes/cakephp/static/css/default.css
+++ b/themes/cakephp/static/css/default.css
@@ -28,6 +28,7 @@
 
 .page-container {
     padding-top: 160px;
+    padding-bottom: 40px;
 }
 
 /* General button */
